# k8sify

./: Cargo.toml  Dockerfile  README.md  k8sify-macos-amd64-binary
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/microservices/: docker-compose.yml
examples/simple-webapp/: docker-compose.yml
examples/wordpress/: docker-compose.yml
k8sify-linux-amd64/: k8sify
src/: analyzer.rs  converter.rs  cost.rs  interview.rs  lib.rs  main.rs  patterns.rs  security.rs  validator.rs
tests/: integration_tests.rs  unit_tests.rs
