[package]
name = "k8sify"
version = "0.1.0"
edition = "2021"
authors = ["K8sify Contributors"]
description = "Intelligent Docker Compose to Kubernetes migration tool with cost analysis, security scanning, and production patterns"
license = "MIT"
repository = "https://github.com/sreniatnoc/k8sify"
keywords = ["kubernetes", "docker-compose", "migration", "devops", "container"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "k8sify"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.0"
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
sha2 = "0.10"
handlebars = "4.5"
walkdir = "2.4"
tempfile = "3.8"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true